--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,11 @@ $secondary: #207376;
 $header-height: 64px;
 $container-width: 1180px;
 
+// z-indexes:
+$header-index: 20;
+$sections-index: 10;
+$lines-index: 1;
+
 // Spacing Desktop
 $offset-a1-desktop: 250px;
 $offset-a2-desktop: 130px;
