--- a/sass/components/_lines.scss
+++ b/sass/components/_lines.scss
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: stretch;
   pointer-events: none; // So it doesn't interfere with other elements
-  z-index: 1;
+  z-index: $lines-index;
   &__line {
     background-color: rgba(#b8b8b8, 0.1);
     width: 1px;
